# q3SATlib

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
Benchmarks/Optimised_circuits/: Optimised_circuit_000.qc  Optimised_circuit_002.qc  Optimised_circuit_003.qc  Optimised_circuit_004.qc  Optimised_circuit_006.qc  Optimised_circuit_007.qc  Optimised_circuit_008.qc  Optimised_circuit_009.qc  Optimised_circuit_011.qc  Optimised_circuit_012.qc  Optimised_circuit_013.qc  Optimised_circuit_014.qc  Optimised_circuit_016.qc  Optimised_circuit_017.qc  Optimised_circuit_018.qc  Optimised_circuit_019.qc  Optimised_circuit_020.qc  Optimised_circuit_021.qc  Optimised_circuit_022.qc  Optimised_circuit_023.qc  Optimised_circuit_024.qc  Optimised_circuit_025.qc  Optimised_circuit_026.qc  Optimised_circuit_027.qc  Optimised_circuit_028.qc  Optimised_circuit_029.qc  Optimised_circuit_031.qc  Optimised_circuit_032.qc  Optimised_circuit_034.qc  Optimised_circuit_035.qc  Optimised_circuit_036.qc  Optimised_circuit_037.qc  Optimised_circuit_038.qc  Optimised_circuit_039.qc  Optimised_circuit_040.qc  Optimised_circuit_041.qc  Optimised_circuit_042.qc  Optimised_circuit_043.qc  Optimised_circuit_044.qc  Optimised_circuit_045.qc  (+186 more)
Benchmarks/Optimised_circuits_log/: optimised_circuit_log_001.txt  optimised_circuit_log_029.txt  optimised_circuit_log_060.txt  optimised_circuit_log_072.txt  optimised_circuit_log_105.txt  optimised_circuit_log_125.txt  optimised_circuit_log_133.txt  optimised_circuit_log_135.txt  optimised_circuit_log_156.txt  optimised_circuit_log_160.txt  optimised_circuit_log_165.txt  optimised_circuit_log_166.txt  optimised_circuit_log_169.txt  optimised_circuit_log_188.txt  optimised_circuit_log_196.txt  optimised_circuit_log_197.txt  optimised_circuit_log_204.txt  optimised_circuit_log_207.txt  optimised_circuit_log_208.txt  optimised_circuit_log_219.txt  optimised_circuit_log_236.txt  optimised_circuit_log_249.txt
Benchmarks/Unoptimised_circuits/: generated_circuit_000.qc  generated_circuit_002.qc  generated_circuit_003.qc  generated_circuit_004.qc  generated_circuit_005.qc  generated_circuit_006.qc  generated_circuit_007.qc  generated_circuit_008.qc  generated_circuit_009.qc  generated_circuit_010.qc  generated_circuit_011.qc  generated_circuit_012.qc  generated_circuit_013.qc  generated_circuit_014.qc  generated_circuit_015.qc  generated_circuit_016.qc  generated_circuit_017.qc  generated_circuit_019.qc  generated_circuit_020.qc  generated_circuit_021.qc  generated_circuit_022.qc  generated_circuit_023.qc  generated_circuit_025.qc  generated_circuit_026.qc  generated_circuit_027.qc  generated_circuit_028.qc  generated_circuit_029.qc  generated_circuit_030.qc  generated_circuit_031.qc  generated_circuit_032.qc  generated_circuit_034.qc  generated_circuit_035.qc  generated_circuit_036.qc  generated_circuit_037.qc  generated_circuit_038.qc  generated_circuit_039.qc  generated_circuit_040.qc  generated_circuit_041.qc  generated_circuit_042.qc  generated_circuit_043.qc  (+195 more)
doc/aqis2025/: aqis.sty  aqis.tex
doc/aspdac2026/: .latexmkrc  Conc.tex  Exp.tex  Exp_corr.tex  Intro.fdb_latexmk  Intro.fls  Intro.tex  Mot.tex  Mot_corr.tex  Pre.fdb_latexmk  Pre.fls  Pre.tex  Pre.tex.bak  Pre.tex.bak~  Pre_corr.tex  Pro.fdb_latexmk  Pro.fls  Pro.tex  fig-and.tex  fig-davio.tex  fig-fiwz.tex  fig-iwz-decomp.tex  fig-iwz.tex  fig-mct-decomp.tex  fig_example.tex  main.aux  main.bbl  main.blg  main.dvi  main.fdb_latexmk  main.fls  main.tex  main_corr.tex  maj_xag.tex  new_new_xag.tex  new_xag.tex  ref.bib  test_diag.tex  xag.tex  xag_and.tex  (+1 more)
doc/aspdac2026/img/: Hgate.tex  Sdgate.tex  Xgate.tex  cnot.tex  fig-bool-or.tex  fig-davio-amy.tex  fig-esop-synth2.tex  fig-esop-synth2.tex~  fig-ex-bdd.tex  fig-f-dot-g-in.tex  fig-func-decomp.tex  fig-phase-n4.tex  fig-series2.tex  fig-shannon-amy-and.tex  fig-step-3.tex  fig-toff-mark-davio.tex  fig-toff-mark-matroid.tex  fig-toff-mark.tex~  flowchart.tex  rtof.tex  table-pseudo-toff.tex
doc/dac2026/: Exp.tex  Intro.tex  Mot.tex  Pre.tex  Pro.tex  main.tex  ref.bib
doc/dac2026/img/: fig-esop-synth.tex  fig-esop-synth.tex~  fig-func-decomp-davio.tex  fig-lut-network.tex  fig-lut-network.tex.bak  fig-phase-n4.tex  fig-rtof3.tex  fig-shannon-amy-unb.tex  fig-toff-mark.tex  fig-urtof.tex  lut_network.tex  lut_rtof.tex  rtofb.tex  table-pseudo-toff.tex~
doc/iccad2026/: .latexmkrc  Conc.tex  Exp.tex  Intro.tex  Pre.tex  Pro.tex  check-ltex  main.tex  ref.bib
doc/iccad2026/img/: Hgate.tex  Tgate.tex  cz.tex  defs.tex  fig-esop-synth.tex  fig-ex-lut-qc.tex  fig-ex-network-og.tex  fig-ex-network.tex  fig-mct-from-phase.tex  fig-phase-mct.tex  fig-series-4inp-inv.tex  fig-series-4inp.tex  fig-series-mct.tex  fig-toff-mark-matroid.tex  fig-toff-mark-matroid2.tex  fig-urtof.tex  flowchart.tex  tbl-exp.tex  (+1 more)
doc/isvlsi2026/: Conc.tex  Exp.tex  Intro.tex  Mot.tex  Pre.tex  Pro.tex  main.tex  ref.bib
exorcism/: CMakeLists.txt  README.md  cmakecall.txt  esop_vecwec_example.bak  exor.cpp  exorBits.cpp  exorCubes.cpp  exorLink.cpp  exorList.cpp  exorUtil.cpp  exorcism.h  exorcism_pybind.cpp  test_exorcism.py
exorcism/eabc/: esop_to_string.hpp  exor.h
pyexorcism/: CMakeLists.txt  esop_parser.cpp  pyproject.toml  setup.py
pyexorcism/cmake/: pyexorcismConfig.cmake.in
pyexorcism/exorcism/: CMakeLists.txt  exor.cpp  exorUtil.cpp  exorcism_bindings.cpp  exorcism_wrapper.cpp
pyexorcism/exorcism/eabc/: abc_global.h
pyexorcism/include/: pyexorcism.hpp
pyexorcism/src/: exorcism.cpp  mymodule.cpp  pyexorcism.cpp
pyexorcism/src/pyexorcism/: __init__.py  __main__.py.in  pyexorcism_py.cpp
src/: CMakeLists.txt  blif_read.py  coff256.py  coffecients.py  esop_to_aiger.py  esop_to_qasm.cpp  gen_n4.py  gen_qc.py  quantumcircuit.py  run_exp.py  run_random_aig_abc.py  testgate.py  testn4.py
src/quantum_compiler/: __init__.py  background_precompute.py  circuit_templates.py  gen_qc.py  n_qubit_esop_builder.py  optimized_compiler.py  quantumcircuit.py  walsh_lookup.py
test/: coffecient_test.py  pytest.ini  qc_test.py  testoracle.py  testquantum.py
(+27 files in other folders)
